2007-03-15  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__: Make have_newer_gnuplot persistent.
	From Daniel J Sebald <daniel.sebald@ieee.org>.

2007-03-15  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/__go_draw_axes__.m (do_linestyle_command): Fix marker types.

	* control/base/rlocus.m: Add asymptotes to the plot.  Use wider
	lines and larger markers.

2007-03-14  John W. Eaton  <jwe@octave.org>

	* plot/__axis_label__.m: Accept additional property-value pairs
	and pass them to __go_text__.  Simply return the handle obtained
	from __go_text__ instead of calling get on the current axis.
	* plot/xlabel.m, plot/zlabel.m, plot/zlabel.m: Check args here.
	Allow for extra property value pairs to be passed along.
	* plot/title.m: Implement with __axis_label__ since it does all
	that title needs to do.

	* plot/clf.m: Set currentaxes property for current figure to [].

	* plot/__axis_label__.m: Convert arg to text handle before calling set.

	* plot/__plt__.m: Return line handles from all calls to __plt1__
	and __plt2__, not just the last.

	* plot/Makefile.in (SOURCES): Rename from SOURCES_M.
	(SOURCES_IN, GEN_M): Delete.
	(FCN_FILES): Don't include $(GEN_M).
	(all): Don't depend on $(GEN_M).
	($(GEN_M) : %.m : %.in): Delete pattern rule.

	* plot/text.m: Use __go_text__ instead of __uiboject_text_ctor__.

	* plot/newplot.m: Call __go_axes_init__ instead of
	__uiobject_axes_init__.

	* plot/mesh.m: Use __go_surface__ instead of
	__uiobject_surface_ctor__.  Don't access object fields directly.

	* plot/line.m: Use __line__ to do actual work.
	* plot/__line__.m: New function.

	* plot/axes.m: Use __go_axes__ to create axes graphics handle.
	Use get and set instead of accessing object fields directly.

	* plot/figure.m: Use __go_figure__ to create figure graphics
	handle.

	* plot/drawnow.m: Register __go_close_all__ with atexit instead of
	__uiobject_close_all.  Call __go_draw_figure__ instead of
	__uiobject_draw_figure__.
