@@ -6,9 +6,11 @@
 2007-03-15  Daniel J Sebald  <daniel.sebald@ieee.org>
 
 	* plot/__go_draw_axes__.m (do_linestyle_command): Fix marker types.
+	Use numeric line types.
 
 	* control/base/rlocus.m: Add asymptotes to the plot.  Use wider
-	lines and larger markers.
+	lines and larger markers.  Remove key titles from line type
+	properties.
 
 2007-03-14  John W. Eaton  <jwe@octave.org>
 
